# bnb-dataset

./: .gitignore  Makefile  README.md  build_testset.py  cities.py  convert_to_lmdb.py  detect_errors.py  detect_room.py  done.py  download_images.py  download_listings.py  extract_keys.py  extract_keys_from_tsv.py  extract_noun_phrases.py  extract_photo_metadata.py  filter_captions.py  find_locations.py  highlight_sentence.py  images.py  istarmap.py  merge_photos.py  mongo_listings.py  perturbate_dataset.py  places365.hierarchy.txt  precompute_airbnb_img_features_with_butd.py  precompute_faster_rcnn_img_features.py  precompute_faster_rcnn_img_features2.py  precompute_faster_rcnn_img_features3.py  precompute_updown_img_features.py  preprocess_dataset.py  pyproject.toml  requirements.txt  search_listings.py  split.py  timer.py
container/: Dockerfile  Singularity.butd
data/: airbnb-test-indoor-filtered.tsv  airbnb-train-indoor-filtered.tsv
locations/: cgn.awk
scripts/: build_testset.py  convert_to_lmdb.py  detect_errors.py  detect_room.py  done.py  download_images.py  download_listings.py  extract_indoor.py  extract_keys.py  extract_keys_from_tsv.py  extract_noun_phrases.py  extract_photo_metadata.py  extract_rooms.py  filter_captions.py  find_locations.py  highlight_sentence.py  istarmap.py  merge_photos.py  mongo_listings.py  perturbate_dataset.py  precompute_airbnb_img_features_with_butd.py  precompute_faster_rcnn_img_features.py  precompute_faster_rcnn_img_features2.py  precompute_faster_rcnn_img_features3.py  precompute_updown_img_features.py  preprocess_dataset.py  (+2 more)
(+5 files in other folders)
